# weather_hud

./: .gitignore  Cargo.toml  daily  hourly
config/: token.json.example
src/: darksky_client.rs  darksky_forecaster.rs  forecast.rs  main.rs
