[package]
name = "weather_hud"
version = "0.1.0"
authors = ["Lucas Taylor <lucas@perfectlunacy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rest API handler
restson = "0.6.0"

# Parser
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

# Time handling
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

# Text formatting
colored = "1.9.3"

# Arg parsing
argparse = "0.2.2"